# advent-of-code-2021

./: .gitignore  CMakeLists.txt  Makefile
aoc/: CMakeLists.txt  day1.cc  day2.cc  day3.cc
